<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--// TODO add constraint-->
    <TextView
        android:id="@+id/text_nama_anggota_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_anggota_1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/text_nim_anggota_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nim_anggota_1"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/text_nama_anggota_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_anggota_2"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="81dp" />

    <TextView
        android:id="@+id/text_nim_anggota_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nim_anggota_2"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="81dp" />

    <TextView
        android:id="@+id/text_nama_anggota_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_anggota_3"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="111dp" />

    <TextView
        android:id="@+id/text_nim_anggota_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nim_anggota_3"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="111dp" />
</androidx.constraintlayout.widget.ConstraintLayout>